--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link href="css/ekko-lightbox.css" rel="stylesheet">
     <link href="styles/main.css" rel="stylesheet">
     <link href="styles/countdown.css" rel="stylesheet">
+    <link href="styles/timeline.css" rel="stylesheet">
   </head>
   <body id="top">
     <header></header>
@@ -39,6 +40,7 @@
         <ul class="navbar-nav ml-auto">
           <li class="nav-item"><a class="nav-link smooth-scroll" href="#home">Home</a></li>
           <li class="nav-item"><a class="nav-link smooth-scroll" href="#couple">Couple</a></li>
+          <li class="nav-item"><a class="nav-link smooth-scroll" href="#timeline">Timeline</a></li>
           <li class="nav-item"><a class="nav-link smooth-scroll" href="#events">Events</a></li>
           <li class="nav-item"><a class="nav-link smooth-scroll" href="#people">People</a></li>
           <li class="nav-item"><a class="nav-link smooth-scroll" href="#gallery">Gallery</a></li>
@@ -104,6 +106,46 @@
       </div>
     </div>
   </div>
+</div>
+<div class="ww-section" id="timeline">
+  <ul class="timeline animate-box">
+    <li class="animate-box">
+      <div class="timeline-badge" style="background-image:url(images/couple-1.jpg);"></div>
+      <div class="timeline-panel">
+        <div class="timeline-heading">
+          <h3 class="timeline-title">First We Meet</h3>
+          <span class="date">December 25, 2015</span>
+        </div>
+        <div class="timeline-body">
+          <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+        </div>
+      </div>
+    </li>
+    <li class="timeline-inverted animate-box">
+      <div class="timeline-badge" style="background-image:url(images/couple-2.jpg);"></div>
+      <div class="timeline-panel">
+        <div class="timeline-heading">
+          <h3 class="timeline-title">First Date</h3>
+          <span class="date">December 28, 2015</span>
+        </div>
+        <div class="timeline-body">
+          <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+        </div>
+      </div>
+    </li>
+    <li class="animate-box">
+      <div class="timeline-badge" style="background-image:url(images/couple-3.jpg);"></div>
+      <div class="timeline-panel">
+        <div class="timeline-heading">
+          <h3 class="timeline-title">In A Relationship</h3>
+          <span class="date">January 1, 2016</span>
+        </div>
+        <div class="timeline-body">
+          <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+        </div>
+      </div>
+    </li>
+  </ul>
 </div>
 <div class="ww-section" id="people">
   <div class="container ww-couple-friends">
