--- a/index.html
+++ b/index.html
@@ -4,11 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Wonderful Wedding</title>
-    <meta name="description" content="Wonderful Wedding Template built with Bootstrap Framework for creating Wedding Website by TemplateFlip.com"/>
-    <link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon/favicon-16x16.png">
+    <title>Aurelie & Romain</title>
+    <meta name="description" content="Aurelie & Romain Wedding"/>
     <link href="https://fonts.googleapis.com/css?family=Dosis:400,500" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Great+Vibes" rel="stylesheet">
     <script defer src="https://use.fontawesome.com/releases/v5.0.4/js/all.js"></script>
@@ -32,9 +29,8 @@
 </div>
 <div class="ww-nav-bar sticky-top bg-light">
   <nav class="navbar navbar-expand-lg navbar-light">
-    <div class="container"><a href="#"><svg class="heart" viewBox="0 0 32 29.6"><path d="M23.6,0c-3.4,0-6.3,2.7-7.6,5.6C14.7,2.7,11.8,0,8.4,0C3.8,0,0,3.8,0,8.4c0,9.4,9.5,11.9,16,21.2c6.1-9.3,16-12.1,16-21.2C32,3.8,28.2,0,23.6,0z"/>
-</svg></a>
-      <h1 class="h2"><a class="pl-4 navbar-brand" href="#">Wonderful Wedding</a></h1>
+    <div class="container">
+      <h1 class="h2"><a class="pl-4 navbar-brand" href="#">Aurelie & Romain</a></h1>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ww-navbarNav" aria-controls="ww-navbarNav" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
       <div class="collapse navbar-collapse text-uppercase" id="ww-navbarNav">
         <ul class="navbar-nav ml-auto">
@@ -315,7 +311,7 @@
 </div>
 <div class="ww-footer bg-light">
   <div class="container text-center py-4">
-    <p class="my-0">&copy; Wonderful Wedding. All rights reserved.</p>
+    <p class="my-0">&copy; Aurelie & Romain. All rights reserved.</p>
     <p class="mb-0">Design - <a class="credit" href="https://templateflip.com" target="_blank">TemplateFlip</a></p>
   </div>
 </div></div>
