--- a/index.html
+++ b/index.html
@@ -49,16 +49,16 @@
 <div class="simply-countdown simply-countdown-one"></div>
 <div class="ww-section" id="couple">
   <div class="container">
-    <h2 class="h1 text-center pb-3 ww-title" data-aos="zoom-in-down" data-aos-duration="1000">Groom & Bride</h2>
+    <h1 class="h1 text-center pb-3 ww-title">Groom & Bride</h1>
     <div class="row text-center">
       <div class="col-md-6">
-        <div class="mt-3"><img class="img-fluid" src="images/romain_main.jpg" alt="Groom" data-aos="flip-left" data-aos-duration="1000"/>
+        <div class="mt-3"><img class="img-fluid" src="images/romain_main.jpg" alt="Groom"/>
           <p class="pt-3 text-left text-muted">Hi I am Raymond,Lorem ipsum dolor sit amet consectetur adipiscing, elit nulla enim arcu dictum lobortis, ac congue non hendrerit accumsan. Ut penatibus litora platea mi mus tempus eros proin, maecenas hac eget hendrerit inceptos per tempor sodales, id varius nulla commodo augue lectus pulvinar. Etiam suscipit leo sollicitudin vivamus tempor himenaeos vitae mattis dictum posuere, tincidunt aenean litora aptent facilisis eu est gravida.</p>
           <h3 class="h2 ww-title">Romain</h3>
         </div>
       </div>
       <div class="col-md-6">
-        <div class="mt-3"><img class="img-fluid" src="images/aurelie_main.jpg" alt="Bride" data-aos="flip-right" data-aos-duration="1000"/>
+        <div class="mt-3"><img class="img-fluid" src="images/aurelie_main.jpg" alt="Bride"/>
           <p class="pt-3 text-left text-muted">Hi I am Susan,Lorem ipsum dolor sit amet consectetur adipiscing, elit nulla enim arcu dictum lobortis, ac congue non hendrerit accumsan. Ut penatibus litora platea mi mus tempus eros proin, maecenas hac eget hendrerit inceptos per tempor sodales, id varius nulla commodo augue lectus pulvinar. Etiam suscipit leo sollicitudin vivamus tempor himenaeos vitae mattis dictum posuere, tincidunt aenean litora aptent facilisis eu est gravida.</p>
           <h3 class="h2 ww-title">Aurelie</h3>
         </div>
@@ -68,7 +68,7 @@
 </div>
 <div class="ww-section bg-light" id="events">
   <div class="container ww-wedding-event">
-    <h2 class="h1 text-center pb-3 ww-title" data-aos="zoom-in-down" data-aos-duration="1000">Wedding Events</h2>
+    <h2 class="h1 text-center pb-3 ww-title">Wedding Events</h2>
     <div class="row">
       <div class="col-md-7 col-sm-12">
         <div class="my-3">
@@ -81,7 +81,7 @@
         </div>
       </div>
       <div class="col-md-5 col-sm-12">
-        <div class="my-3"><img class="img-fluid" src="images/wedding-party.jpg" alt="Wedding Party" data-aos="fade-down-right" data-aos-duration="1000"/></div>
+        <div class="my-3"><img class="img-fluid" src="images/wedding-party.jpg" alt="Wedding Party"/></div>
       </div>
     </div>
     <div class="row">
@@ -96,7 +96,7 @@
         </div>
       </div>
       <div class="col-md-5 col-sm-12">
-        <div class="my-3"><img class="img-fluid" src="images/reception.jpg" alt="Reception" data-aos="fade-up-right" data-aos-duration="1000"/></div>
+        <div class="my-3"><img class="img-fluid" src="images/reception.jpg" alt="Reception"/></div>
       </div>
     </div>
   </div>
@@ -143,8 +143,8 @@
 </div>
 <div class="ww-section" id="people">
   <div class="container ww-couple-friends">
-    <h2 class="h1 text-center pt-3 ww-title" data-aos="zoom-in-down" data-aos-duration="1000">Groomsmen & Bridesmaids</h2>
-    <div class="carousel slide" id="ww-carouselIndicator" data-ride="carousel" data-aos="zoom-in-up" data-aos-duration="1000">
+    <h2 class="h1 text-center pt-3 ww-title">Groomsmen & Bridesmaids</h2>
+    <div class="carousel slide" id="ww-carouselIndicator" data-ride="carousel">
       <ol class="carousel-indicators">
         <li class="active" data-target="#ww-carouselIndicator" data-slide-to="0"></li>
         <li data-target="#ww-carouselIndicator" data-slide-to="1"></li>
@@ -225,9 +225,9 @@
 <div class="ww-section bg-light" id="gallery">
   <div class="ww-photo-gallery">
     <div class="container">
-      <h2 class="h1 text-center pb-3 ww-title" data-aos="zoom-in-down" data-aos-duration="1000">Photo Gallery</h2>
+      <h2 class="h1 text-center pb-3 ww-title">Photo Gallery</h2>
       <div class="col-md-12 text-center ww-category-filter mb-4"><a class="btn btn-outline-primary ww-filter-button" href="#" data-filter="all">All</a><a class="btn btn-outline-primary ww-filter-button" href="#" data-filter="vacation">Our Vacation</a><a class="btn btn-outline-primary ww-filter-button" href="#" data-filter="party">Party</a><a class="btn btn-outline-primary ww-filter-button" href="#" data-filter="ceremony">Ceremony</a><a class="btn btn-outline-primary ww-filter-button" href="#" data-filter="wedding">Wedding</a></div>
-      <div class="ww-gallery" data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-delay="300" data-aos-duration="1000" data-aos-offset="0">
+      <div class="ww-gallery">
         <div class="card-columns">
           <div class="card" data-groups="[&quot;vacation&quot;,&quot;ceremony&quot;]"><a href="images/gallery-pic-1.jpg" data-toggle="lightbox" data-gallery="ww-gallery"><img class="img-fluid" src="images/gallery-pic-1.jpg" alt="Gallery Pic 1"/></a></div>
           <div class="card" data-groups="[&quot;party&quot;,&quot;wedding&quot;]"><a href="images/gallery-pic-2.jpg" data-toggle="lightbox" data-gallery="ww-gallery"><img class="img-fluid" src="images/gallery-pic-2.jpg" alt="Gallery Pic 2"/></a></div>
@@ -243,9 +243,9 @@
   </div>
 </div>
 <div class="ww-section ww-rsvp-detail text-white" id="rsvp">
-  <div class="container" data-aos="zoom-in-up" data-aos-duration="1000">
+  <div class="container">
     <div class="col text-center">
-      <h2 class="h1 ww-title pb-3" data-aos="zoom-in-down" data-aos-duration="1000">Join Our Party</h2>
+      <h2 class="h1 ww-title pb-3">Join Our Party</h2>
     </div>
     <div class="row ww-rsvp-form">
       <div class="col-md-10">
