--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
   </div>
 </div>
 <div class="ww-section" id="timeline">
+  <h1 class="h1 text-center pb-3 ww-title">Timeline</h1>
   <ul class="timeline animate-box">
     <li class="animate-box">
       <div class="timeline-badge" style="background-image:url(images/couple-1.jpg);"></div>
