Update main nav style (white -> blue) and update button color accordingly

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </div>
   </div>
 </div>
-<div class="ww-nav-bar sticky-top bg-light">
+<div class="ww-nav-bar sticky-top bg-blue">
   <nav class="navbar navbar-expand-lg navbar-light">
     <div class="container">
       <h1 class="h2"><a class="pl-4 navbar-brand" href="#">Aurelie & Romain</a></h1>
