Use aws lambda function to save the form content and process the data

--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
         $('#rsvp-form').submit(function(event) {
           event.preventDefault();
           // Get all the forms elements and their values in one step
-          var values = $(this).serialize();
+          var values = $(this).serializeArray();
           rsvpApiCall(values);
         });
       });
