Fix Aurélie Name - Adds acute accent on Aurélie's name

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Aurelie & Romain</title>
-    <meta name="description" content="Aurelie & Romain Wedding"/>
+    <title>Aurélie & Romain</title>
+    <meta name="description" content="Aurélie & Romain Wedding"/>
     <link href="https://fonts.googleapis.com/css?family=Dosis:400,500" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Great+Vibes" rel="stylesheet">
     <script defer src="https://use.fontawesome.com/releases/v5.0.4/js/all.js"></script>
@@ -22,7 +22,7 @@
 <div class="ww-home-page" id="home">
   <div class="ww-wedding-announcement d-flex align-items-center justify-content-start">
     <div class="container ww-announcement-container">
-      <p class="ww-couple-name ww-title" data-aos="zoom-in-down" data-aos-delay="300" data-aos-duration="1000">Aurelie & Romain</p><img class="img-fluid mt-1" src="images/laurel-1.png" alt="Heart" data-aos="zoom-in-down" data-aos-delay="300" data-aos-duration="1000"/>
+      <p class="ww-couple-name ww-title" data-aos="zoom-in-down" data-aos-delay="300" data-aos-duration="1000">Aurélie & Romain</p><img class="img-fluid mt-1" src="images/laurel-1.png" alt="Heart" data-aos="zoom-in-down" data-aos-delay="300" data-aos-duration="1000"/>
       <p class="h1 mt-5 ww-title" data-aos="zoom-in-down" data-aos-delay="300" data-aos-duration="1000" data-aos-offset="10">27<sup>th</sup> July, 2019</p>
     </div>
   </div>
@@ -30,7 +30,7 @@
 <div class="ww-nav-bar sticky-top bg-blue">
   <nav class="navbar navbar-expand-lg navbar-light">
     <div class="container">
-      <h1 class="h2"><a class="pl-4 navbar-brand" href="#">Aurelie & Romain</a></h1>
+      <h1 class="h2"><a class="pl-4 navbar-brand" href="#">Aurélie & Romain</a></h1>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ww-navbarNav" aria-controls="ww-navbarNav" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
       <div class="collapse navbar-collapse text-uppercase" id="ww-navbarNav">
         <ul class="navbar-nav ml-auto">
@@ -60,7 +60,7 @@
       <div class="col-md-6">
         <div class="mt-3"><img class="img-fluid" src="images/aurelie_main.jpg" alt="Bride"/>
           <p class="pt-3 text-left text-muted">Hi I am Susan,Lorem ipsum dolor sit amet consectetur adipiscing, elit nulla enim arcu dictum lobortis, ac congue non hendrerit accumsan. Ut penatibus litora platea mi mus tempus eros proin, maecenas hac eget hendrerit inceptos per tempor sodales, id varius nulla commodo augue lectus pulvinar. Etiam suscipit leo sollicitudin vivamus tempor himenaeos vitae mattis dictum posuere, tincidunt aenean litora aptent facilisis eu est gravida.</p>
-          <h3 class="h2 ww-title">Aurelie</h3>
+          <h3 class="h2 ww-title">Aurélie</h3>
         </div>
       </div>
     </div>
@@ -310,7 +310,7 @@
 </div>
 <div class="ww-footer bg-light">
   <div class="container text-center py-4">
-    <p class="my-0">&copy; Aurelie & Romain. All rights reserved.</p>
+    <p class="my-0">&copy; Aurélie & Romain. All rights reserved.</p>
     <p class="mb-0">Design - <a class="credit" href="https://templateflip.com" target="_blank">TemplateFlip</a></p>
   </div>
 </div></div>
