Add an introduction section and update bride/groom information

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <div class="ww-wedding-announcement d-flex align-items-center justify-content-start">
     <div class="container ww-announcement-container">
       <p class="ww-couple-name ww-title" data-aos="zoom-in-down" data-aos-delay="300" data-aos-duration="1000">Aurélie & Romain</p><img class="img-fluid mt-1" src="images/laurel-1.png" alt="Heart" data-aos="zoom-in-down" data-aos-delay="300" data-aos-duration="1000"/>
-      <p class="h1 mt-5 ww-title" data-aos="zoom-in-down" data-aos-delay="300" data-aos-duration="1000" data-aos-offset="10">27<sup>th</sup> July, 2019</p>
+      <p class="ww-announcement-date h1 mt-5 ww-title" data-aos="zoom-in-down" data-aos-delay="300" data-aos-duration="1000" data-aos-offset="10">27<sup>th</sup> July, 2019</p>
     </div>
   </div>
 </div>
@@ -46,23 +46,56 @@
     </div>
   </nav>
 </div>
-<div class="simply-countdown simply-countdown-one"></div>
+<div class="ww-section  bg-light" id="introduction">
+  <div class="container">
+    <div class="row">
+      <div class="introduction-text col-md-6">
+        <p>Bienvenue sur le site de notre mariage !</p>
+        <p>Vous trouverez ici des informations pour vous aider à organiser votre venue et partager avec nous ce jour - on l'espère - inoubliable.</p>
+        <p>On vous embrasse tous bien fort.</p>
+        <p>A très bientôt,</p>
+        <p>Aurélie et Romain</p>
+      </div>
+      <div class="col-md-6">
+        <div class="simply-countdown simply-countdown-one"></div>
+      </div>
+    </div>
+  </div>
+</div>
 <div class="ww-section" id="couple">
   <div class="container">
-    <h1 class="h1 text-center pb-3 ww-title">Groom & Bride</h1>
     <div class="row text-center">
       <div class="col-md-6">
-        <div class="mt-3"><img class="img-fluid" src="images/romain_main.jpg" alt="Groom"/>
-          <p class="pt-3 text-left text-muted">Hi I am Raymond,Lorem ipsum dolor sit amet consectetur adipiscing, elit nulla enim arcu dictum lobortis, ac congue non hendrerit accumsan. Ut penatibus litora platea mi mus tempus eros proin, maecenas hac eget hendrerit inceptos per tempor sodales, id varius nulla commodo augue lectus pulvinar. Etiam suscipit leo sollicitudin vivamus tempor himenaeos vitae mattis dictum posuere, tincidunt aenean litora aptent facilisis eu est gravida.</p>
-          <h3 class="h2 ww-title">Romain</h3>
+        <h1 class="h1 ww-title">Aurélie</h3>
+        <div class="mt-3"><img class="img-fluid" src="images/aurelie_main.jpg" alt="Bride"/>
+          <p class="pt-3 text-left">
+            L'aventurière du couple, Aurélie adore faire des rencontre insolites, que ce soit au milieu de la mangrove Thaïlandaise (rend moi mon appareil photo !), en haut des falaises de Moher (j'ai le vertige, je veux partir d'ici...) ou dans son appartement Londonien (une araignéeeeeee !!!!!).</p>
+          <p class="text-left">
+              Sa plus belle rencontre insolite arriva il y a quelques années, quand elle tomba sous le charme de ce talentueux danseur, grand, beau, ténébreux (qu'est-ce qu'il ne faut pas dire pour lui faire plaisir) et surtout très drôle.</p>
+          <p class="text-left">Après quelques mois rock'n'roll, les amoureux se lancent dans leur propre danse à deux, et d'aventure en aventure, arrivent à Londres pour faire d'autres rencontres encore plus insolites: les scones, le criquet et les écureuils.</p>
+          <p class="text-left">Aurélie ne sait pas rester en place plus de quelques mois; 'et si on changeait d'appart ?', 'et si on partait en vacances à Istanbul ?', 'et si je quittais l'académie ?', 'ça te dit de tout quitter et de partir en Australie, au Canada, à Barcelone, en Suisse ?', 'et si on faisait le tour du monde en un an?', 'je vais me mettre au crochet, ça serait super que je sache faire quelque chose de créatif'.</p>
+          <p class="text-left">C'est en voyant l'attitude réconfortante et encourageante de Romain à chaque nouvelle idée, et en ignorant volontairement ses yeux apeurés, qu'Aurélie sû qu'elle ne pouvait plus se passer de lui. Alors, elle n'hésita pas à dire oui, en cette soirée romantique du 14 Octobre 2018, à Vienne...</p>
         </div>
       </div>
       <div class="col-md-6">
-        <div class="mt-3"><img class="img-fluid" src="images/aurelie_main.jpg" alt="Bride"/>
-          <p class="pt-3 text-left text-muted">Hi I am Susan,Lorem ipsum dolor sit amet consectetur adipiscing, elit nulla enim arcu dictum lobortis, ac congue non hendrerit accumsan. Ut penatibus litora platea mi mus tempus eros proin, maecenas hac eget hendrerit inceptos per tempor sodales, id varius nulla commodo augue lectus pulvinar. Etiam suscipit leo sollicitudin vivamus tempor himenaeos vitae mattis dictum posuere, tincidunt aenean litora aptent facilisis eu est gravida.</p>
-          <h3 class="h2 ww-title">Aurélie</h3>
+          <h1 class="h1 ww-title">Romain</h3>
+          <div class="mt-3"><img class="img-fluid" src="images/romain_main.jpg" alt="Groom"/>
+            <p class="pt-3 text-left">
+              Prêt à soulever des montagnes (dans ce cas précis, un bout de volcan) pour faire plaisir à sa fiancée, Romain a vécu des aventures
+              inoubliables ces cinq dernières années auprès de sa dulcinée.</p>
+            <p class="text-left">
+              Il a quitté la France, pays du soleil, des coeurs de canards, du pâté de papa, et des tripoux, pour vivre
+              dans un environnement hostile, entouré de pintes de bière, ravagé par la pluie en continue et déprimé par le manque de vitamine D.
+            </p>
+            <p class="text-left">
+              Malgré toutes ces difficultés, il a réussit à s'adapter à la vie Londonienne et peut maintenant boire deux pintes de Guinness dans la même soirée
+              sans être trop atteint (la troisième reste un véritable challenge…). Il a maintenant pris goût à l'aventure et n'hésite pas à découvrir de nouvelles contrées (le centre de Londres), des saveurs locales (le cheddar anglais), et à parler une langue étrangère tout en gardant son accent du sud (ce n'est pas donné à tout le monde!).
+            </p>
+            <p class="text-left">
+              Après avoir vécu tous ces moments de bonheurs et d'escapades insolites, Romain a su rapidement qu'il ne pouvait plus vivre sans entendre le rire d'Aurélie, sans la regarder tous les jours que Dieu fait, et sans la tenir contre lui. Ainsi, le 14 octobre 2018, il se jette à l'eau et organise un weekend en amoureux à Vienne pour faire sa demande...
+            </p>
+          </div>
         </div>
-      </div>
     </div>
   </div>
 </div>
