Add 3 new sections: how to come to the venue, where to sleep and what to visit around

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <li class="nav-item"><a class="nav-link smooth-scroll" href="#events">Events</a></li>
           <li class="nav-item"><a class="nav-link smooth-scroll" href="#timeline">Timeline</a></li>
           <li class="nav-item"><a class="nav-link smooth-scroll" href="#people">People</a></li>
-          <li class="nav-item"><a class="nav-link smooth-scroll" href="#gallery">Gallery</a></li>
+          <li class="nav-item"><a class="nav-link smooth-scroll" href="#tourism-details">Infos</a></li>
           <li class="nav-item"><a class="nav-link smooth-scroll" href="#rsvp">RSVP</a></li>
         </ul>
       </div>
@@ -256,7 +256,161 @@
     </div>
   </div>
 </div>
-<div class="ww-section bg-light" id="gallery">
+<div class="ww-section bg-light" id="tourism-details">
+    <div class="ww-tourism">
+      <div class="container">
+        <h2 class="h1 text-center pb-3 ww-title">Comment venir</h2>
+        <div class="row how-to-come">
+          <div class="col-md-4">
+            <div class="tourism-icon">
+              <img src="images/icon_plane.png"/>
+            </div>
+            <p>Les aéroports autours de Niort:
+              <ul>
+                <li>La Rochelle - Île de Ré</li>
+                <li>Paris Charles de Gaulle</li>
+                <li>Paris Orly</li>
+                <li>Poitiers Biard</li>
+                <li>Bordeaux - Mérignac</li>
+              </ul>
+              </p>
+          </div>
+          <div class="col-md-4">
+            <div class="tourism-icon">
+              <img src="images/icon_train.png"/>
+            </div>
+            <p>De La Rochelle: 
+              Prendre un train direct de La Rochelle à Niort (environ 40 min)
+            </p>
+            <p>
+              De Paris: 
+              Prendre un train direct de Gare Montparnasse Paris à Niort (environ 2h)
+            </p>
+            <p>
+              De Poitiers: 
+              Prendre un train direct de Poitiers à Niort (environ 50 min)
+            </p>
+            <p>
+              De Bordeaux:
+              Prendre un train de Bordeaux à Niort (environ 2h40) - un changement obligatoire à Poitiers
+            </p>
+          </div>
+          <div class="col-md-4">
+            <div class="tourism-icon">
+              <img src="images/icon_car.png"/>
+            </div>
+            <p>En location, de La Rochelle: 
+                <a href="https://www.rentalcars.com/fr/">Rentalcars.com</a>
+            </p>
+            <p>
+                A côté de la gare:
+                <a href="https://www.europcar-atlantique.fr/agences/la-rochelle">Europcar</a>,
+                <a href="https://www.hertz.fr/rentacar/location#results">Hertz</a>,
+                <a href="https://www.sixt.fr/location-voiture/france/la-rochelle/la-rochelle-gare?xaid=7494&c1=FR&c2=la-rochelle&c3=sixt-la-rochelle-gare">Sixt</a>
+              </p>
+              <p>
+                A côté de l'aéroport:
+                <a href="https://www.europcar-atlantique.fr/agences/la-rochelle-aeroport">Europcar</a>,
+                <a href="https://www.hertz.fr/rentacar/location#results">Hertz</a>,
+                <a href="https://www.sixt.fr/location-voiture/france/la-rochelle/la-rochelle-aeroport?xaid=7494&c1=FR&c2=la-rochelle&c3=sixt-la-rochelle-aeroport">Sixt</a>, 
+              </p>
+              <p>
+                De Niort: 
+                <a href="https://www.rentalcars.com/fr/3">Rentalcars.com</a>
+                <a href="https://www.europcar-atlantique.fr/agences/niort">Europcar</a>
+              </p>
+            </p>   
+          </div>
+        </div>
+        <h2 class="h1 text-center pb-3 ww-title">Where to sleep</h2>
+        <div class="row justify-content-center where-to-sleep">
+          <div class="col-md-4">
+            <h2>Gites</h2>
+            <ul>
+              <li><a href="http://www.motteaubert.com/fr/gites/gites-3.html">La Motte Aubert</a></li>
+              <li><a href="https://www.lelogisdevallans.com/">Logis de Vallans</a></li>
+              <li><a href="http://www.simply-france.co.uk/tournesols/index.html">Maison des tournesols</a></li>
+              <li><a href="https://www.chateaulabone.fr/">Chateau la Bone</a></li>
+              <li><a href="http://www.gite-les-frenes.com/">Gîte les Frênes</a></li>
+              <li><a href="https://www.booking.com/hotel/fr/gite-sud-deux-sevres.en-gb.html">Gîte Sud Deux Sèvres</a></li>
+            </ul>
+          </div>
+          <div class="col-md-4">
+              <h2>airBnBs</h2>
+              <ul>
+                  <li><a href="https://www.airbnb.co.uk/rooms/7961355?location=Beauvoir%20sur%20Niort&s=ge7e_6M0">Airbnb link</a></li>
+                  <li><a href="https://www.airbnb.co.uk/rooms/13651697?location=Beauvoir%20sur%20Niort&s=ge7e_6M0">Airbnb link</a></li>
+                  <li><a href="https://www.airbnb.co.uk/rooms/17036112?location=Beauvoir%20sur%20Niort&s=ge7e_6M0">Airbnb link</a></li>
+                  <li><a href="https://www.airbnb.co.uk/rooms/3961259?location=Beauvoir%20sur%20Niort&s=ge7e_6M0">Airbnb link</a></li>
+                  <li><a href="https://www.airbnb.co.uk/rooms/16720190?location=Beauvoir%20sur%20Niort&s=ge7e_6M0">Airbnb link</a></li>
+                  <li><a href="https://www.airbnb.co.uk/rooms/23801154?location=Beauvoir%20sur%20Niort&s=ge7e_6M0">Airbnb link</a></li>
+                  <li><a href="https://www.airbnb.co.uk/rooms/22173624?location=Beauvoir%20sur%20Niort&s=ge7e_6M0">Airbnb link</a></li>
+                  <li><a href="https://www.airbnb.co.uk/rooms/26889328?location=Beauvoir%20sur%20Niort&s=ge7e_6M0">Airbnb link</a></li>
+                  <li><a href="https://www.airbnb.co.uk/rooms/15983471?location=Beauvoir%20sur%20Niort&s=ge7e_6M0">Airbnb link</a></li>
+                  <li><a href="https://www.airbnb.co.uk/rooms/20211696?location=Beauvoir%20sur%20Niort&s=ge7e_6M0">Airbnb link</a></li>
+                  <li><a href="https://www.airbnb.co.uk/rooms/9203375?location=Beauvoir%20sur%20Niort&s=ge7e_6M0">Airbnb link</a></li>
+                  <li><a href="https://www.airbnb.co.uk/rooms/11887668?location=Beauvoir%20sur%20Niort&s=ge7e_6M0">Airbnb link</a></li>
+                  <li><a href="https://www.airbnb.co.uk/rooms/9203373?location=Beauvoir%20sur%20Niort&s=ge7e_6M0">Airbnb link</a></li>
+                  <li><a href="https://www.airbnb.co.uk/rooms/20028548?location=Beauvoir%20sur%20Niort&s=ge7e_6M0">Airbnb link</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <h2 class="h1 text-center pb-3 ww-title">What to visit</h2>
+        <div class="row what-to-visit">
+          <div class="col-md-3 visit-place">
+            <h3>La Rochelle</h3>
+            <span class="distance">(voiture: 50 min de Niort)</span>
+            <p>Ma ville! Á ne pas manquer!</p>
+          </div>  
+          <div class="col-md-3 visit-place">
+            <h3>Île de Ré</h3>
+            <span class="distance">(voiture: 1h10 de Niort)</span>
+            <p>Balades
+            Vélo
+            Nature
+            Plage
+            Marchés
+            </p>
+          </div>
+          <div class="col-md-3 visit-place">
+            <h3>Puy du Fou</h3>
+            <span class="distance">(voiture: 1h20 de Niort)</span>
+            <p>Parc d'attraction, spectacles
+            À ne pas manquer!
+            </p>
+          </div>
+          <div class="col-md-3 visit-place">
+            <h3>Futuroscope</h3>
+            <span class="distance">(voiture: 1h de Niort)</span>
+            <p>Parc d'attraction
+              À ne pas manquer!
+            </p>
+          </div>
+          <div class="col-md-3 visit-place">
+            <h3>Le marais poitevin</h3>
+            <span class="distance">(voiture: 1h de Niort)</span>
+            <p>Balades en barques
+            Vélo
+            Nature
+            Randonnées
+          </p>
+          </div>
+          <div class="col-md-3 visit-place">
+            <h3>Poitiers</h3>
+            <span class="distance">(voiture:1h de Niort)</span>
+            <p>Ville Romane</p>
+          </div>
+          <div class="col-md-3 visit-place">  
+            <h3>Zoo de la Palmyre</h3>
+            <span class="distance">(voiture: 1h30 min de Niort)</span>
+            <p>Zoo - y passer la journée</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+<div class="ww-section bg-light" id="gallery" hidden>
   <div class="ww-photo-gallery">
     <div class="container">
       <h2 class="h1 text-center pb-3 ww-title">Photo Gallery</h2>
