--- a/index.html
+++ b/index.html
@@ -178,84 +178,49 @@
 <div class="ww-section" id="people">
   <div class="container ww-couple-friends">
     <h2 class="h1 text-center pt-3 ww-title">Groomsmen & Bridesmaids</h2>
-    <div class="carousel slide" id="ww-carouselIndicator" data-ride="carousel">
-      <ol class="carousel-indicators">
-        <li class="active" data-target="#ww-carouselIndicator" data-slide-to="0"></li>
-        <li data-target="#ww-carouselIndicator" data-slide-to="1"></li>
-      </ol>
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <div class="row">
-            <div class="col-md-4">
-              <div class="card d-block mb-3"><img class="card-img-top" src="images/groom-men-1.jpg" alt="Groom Men 1"/>
-                <div class="card-body text-center">
-                  <div class="h5">Bryan Berry</div>
-                  <p class="mb-0 text-muted">Best Friend</p>
-                  <p class="text-muted">Groomsmen</p>
-                  <div class="ww-social-links"><a class="btn btn-link" href="#"><i class="fab fa-facebook-f" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-google-plus-g" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-instagram" aria-hidden="true"></i></a></div>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-4">
-              <div class="card d-block mb-3"><img class="card-img-top" src="images/groom-men-2.jpg" alt="Groom Men 2"/>
-                <div class="card-body text-center">
-                  <div class="h5 text-center">Kevin Johnston</div>
-                  <p class="mb-0 text-muted">Room Mate</p>
-                  <p class="text-muted">Groomsmen</p>
-                  <div class="ww-social-links"><a class="btn btn-link" href="#"><i class="fab fa-facebook-f" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-google-plus-g" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-instagram" aria-hidden="true"></i></a></div>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-4">
-              <div class="card d-block mb-3"><img class="card-img-top" src="images/groom-men-3.jpg" alt="Groom Men 3"/>
-                <div class="card-body text-center">
-                  <div class="h5 text-center">Arthur Wright</div>
-                  <p class="mb-0 text-muted">Friend</p>
-                  <p class="text-muted">Groomsmen</p>
-                  <div class="ww-social-links"><a class="btn btn-link" href="#"><i class="fab fa-facebook-f" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-google-plus-g" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-instagram" aria-hidden="true"></i></a></div>
-                </div>
-              </div>
-            </div>
+    <div class="row">
+      <div class="col-md-3">
+        <div class="card d-block mb-3"><img class="card-img-top" src="images/groom-men-1.jpg" alt="Groom Men 1"/>
+          <div class="card-body text-center">
+            <div class="h5">Bryan Berry</div>
+            <p class="mb-0 text-muted">Best Friend</p>
+            <p class="text-muted">Groomsmen</p>
+            <div class="ww-social-links"><a class="btn btn-link" href="#"><i class="fab fa-facebook-f" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-google-plus-g" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-instagram" aria-hidden="true"></i></a></div>
           </div>
         </div>
-        <div class="carousel-item">
-          <div class="row">
-            <div class="col-md-4">
-              <div class="card d-block mb-3"><img class="card-img-top" src="images/bride-maid-1.jpg" alt="Bride Maid 1"/>
-                <div class="card-body text-center">
-                  <div class="h5">Rachel Lawson</div>
-                  <p class="mb-0 text-muted">Best Friend</p>
-                  <p class="text-muted">Bridesmaids</p>
-                  <div class="ww-social-links"><a class="btn btn-link" href="#"><i class="fab fa-facebook-f" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-google-plus-g" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-instagram" aria-hidden="true"></i></a></div>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-4">
-              <div class="card d-block mb-3"><img class="card-img-top" src="images/bride-maid-2.jpg" alt="Bride Maid 2"/>
-                <div class="card-body text-center">
-                  <div class="h5 text-center">Betty George</div>
-                  <p class="mb-0 text-muted">Room Mate</p>
-                  <p class="text-muted">Bridesmaids</p>
-                  <div class="ww-social-links"><a class="btn btn-link" href="#"><i class="fab fa-facebook-f" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-google-plus-g" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-instagram" aria-hidden="true"></i></a></div>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-4">
-              <div class="card d-block mb-3"><img class="card-img-top" src="images/bride-maid-3.jpg" alt="Bride Maid 3"/>
-                <div class="card-body text-center">
-                  <div class="h5 text-center">Emma Snyder</div>
-                  <p class="mb-0 text-muted">Friend</p>
-                  <p class="text-muted">Bridesmaids</p>
-                  <div class="ww-social-links"><a class="btn btn-link" href="#"><i class="fab fa-facebook-f" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-google-plus-g" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-instagram" aria-hidden="true"></i></a></div>
-                </div>
-              </div>
-            </div>
+      </div>
+      <div class="col-md-3">
+        <div class="card d-block mb-3"><img class="card-img-top" src="images/groom-men-2.jpg" alt="Groom Men 2"/>
+          <div class="card-body text-center">
+            <div class="h5 text-center">Kevin Johnston</div>
+            <p class="mb-0 text-muted">Room Mate</p>
+            <p class="text-muted">Groomsmen</p>
+            <div class="ww-social-links"><a class="btn btn-link" href="#"><i class="fab fa-facebook-f" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-google-plus-g" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-instagram" aria-hidden="true"></i></a></div>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="card d-block mb-3"><img class="card-img-top" src="images/groom-men-3.jpg" alt="Groom Men 3"/>
+          <div class="card-body text-center">
+            <div class="h5 text-center">Arthur Wright</div>
+            <p class="mb-0 text-muted">Friend</p>
+            <p class="text-muted">Groomsmen</p>
+            <div class="ww-social-links"><a class="btn btn-link" href="#"><i class="fab fa-facebook-f" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-google-plus-g" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-instagram" aria-hidden="true"></i></a></div>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="card d-block mb-3"><img class="card-img-top" src="images/groom-men-3.jpg" alt="Groom Men 3"/>
+          <div class="card-body text-center">
+            <div class="h5 text-center">Arthur Wright</div>
+            <p class="mb-0 text-muted">Friend</p>
+            <p class="text-muted">Groomsmen</p>
+            <div class="ww-social-links"><a class="btn btn-link" href="#"><i class="fab fa-facebook-f" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-google-plus-g" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-instagram" aria-hidden="true"></i></a></div>
           </div>
         </div>
       </div>
     </div>
-  </div>
-</div>
+ </div>
 <div class="ww-section bg-light" id="tourism-details">
     <div class="ww-tourism">
       <div class="container">
@@ -456,13 +421,13 @@
             <div class="row">
               <div class="col md-6 pb-3">
                 <div class="form-group">
-                  <label for="guest-input">Nombre d'adultes</label>
+                  <label for="guest-input">Nombre d'adultes*</label>
                   <input class="form-control" id="name-input" type="text" name="adult-info" required="required"/>
                 </div>
               </div>
               <div class="col md-6 pb-3">
                 <div class="form-group">
-                  <label for="guest-input">Nombre d'enfants (< 18 ans) et âge:</label>
+                  <label for="guest-input">Nombre d'enfants (< 18 ans) et âge*:</label>
                   <input class="form-control" id="name-input" type="text" name="kid-info" required="required" placeholder="Example: 2 (6 et 8 ans)"/>
                 </div>
               </div>
