Update lot of small details (image sizes, descriptions, translations, ...)

--- a/index.html
+++ b/index.html
@@ -23,24 +23,23 @@
   <div class="ww-wedding-announcement d-flex align-items-center justify-content-start">
     <div class="container ww-announcement-container">
       <p class="ww-couple-name ww-title" data-aos="zoom-in-down" data-aos-delay="300" data-aos-duration="1000">Aurélie & Romain</p><img class="img-fluid mt-1" src="images/laurel-1.png" alt="Heart" data-aos="zoom-in-down" data-aos-delay="300" data-aos-duration="1000"/>
-      <p class="ww-announcement-date h1 mt-5 ww-title" data-aos="zoom-in-down" data-aos-delay="300" data-aos-duration="1000" data-aos-offset="10">27<sup>th</sup> July, 2019</p>
+      <p class="ww-announcement-date h1 mt-5 ww-title" data-aos="zoom-in-down" data-aos-delay="300" data-aos-duration="1000" data-aos-offset="10">27 Juillet 2019</p>
     </div>
   </div>
 </div>
 <div class="ww-nav-bar sticky-top bg-blue">
   <nav class="navbar navbar-expand-lg navbar-light">
     <div class="container">
-      <h1 class="h2"><a class="pl-4 navbar-brand" href="#">Aurélie & Romain</a></h1>
+      <h1 class="h2"><a class="pl-4 navbar-brand" href="#">Aurélie & Romain - 27 Juillet 2019</a></h1>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ww-navbarNav" aria-controls="ww-navbarNav" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
       <div class="collapse navbar-collapse text-uppercase" id="ww-navbarNav">
         <ul class="navbar-nav ml-auto">
-          <li class="nav-item"><a class="nav-link smooth-scroll" href="#home">Home</a></li>
-          <li class="nav-item"><a class="nav-link smooth-scroll" href="#couple">Couple</a></li>
-          <li class="nav-item"><a class="nav-link smooth-scroll" href="#events">Events</a></li>
-          <li class="nav-item"><a class="nav-link smooth-scroll" href="#timeline">Timeline</a></li>
-          <li class="nav-item"><a class="nav-link smooth-scroll" href="#people">People</a></li>
-          <li class="nav-item"><a class="nav-link smooth-scroll" href="#tourism-details">Infos</a></li>
-          <li class="nav-item"><a class="nav-link smooth-scroll" href="#rsvp">RSVP</a></li>
+          <li class="nav-item"><a class="nav-link smooth-scroll" href="#couple">Nous</a></li>
+          <li class="nav-item"><a class="nav-link smooth-scroll" href="#events">Le programme</a></li>
+          <li class="nav-item"><a class="nav-link smooth-scroll" href="#timeline">Notre histoire</a></li>
+          <li class="nav-item"><a class="nav-link smooth-scroll" href="#people">Nos témoins</a></li>
+          <li class="nav-item"><a class="nav-link smooth-scroll" href="#tourism-details">Infos pratiques</a></li>
+          <li class="nav-item"><a class="nav-link smooth-scroll" href="#rsvp">Réponse</a></li>
         </ul>
       </div>
     </div>
@@ -71,8 +70,8 @@
           <p class="pt-3 text-left">
             L'aventurière du couple, Aurélie adore faire des rencontre insolites, que ce soit au milieu de la mangrove Thaïlandaise (rend moi mon appareil photo !), en haut des falaises de Moher (j'ai le vertige, je veux partir d'ici...) ou dans son appartement Londonien (une araignéeeeeee !!!!!).</p>
           <p class="text-left">
-              Sa plus belle rencontre insolite arriva il y a quelques années, quand elle tomba sous le charme de ce talentueux danseur, grand, beau, ténébreux (qu'est-ce qu'il ne faut pas dire pour lui faire plaisir) et surtout très drôle.</p>
-          <p class="text-left">Après quelques mois rock'n'roll, les amoureux se lancent dans leur propre danse à deux, et d'aventure en aventure, arrivent à Londres pour faire d'autres rencontres encore plus insolites: les scones, le criquet et les écureuils.</p>
+              Sa plus belle rencontre insolite arriva il y a quelques années, quand elle tomba sous le charme de ce talentueux danseur, grand, beau, ténébreux (qu'est-ce qu'il ne faut pas dire pour lui faire plaisir) et surtout très drôle.
+              Après quelques mois rock'n'roll, les amoureux se lancent dans leur propre danse à deux, et d'aventure en aventure, arrivent à Londres pour faire d'autres rencontres encore plus insolites: les scones, le criquet et les écureuils.</p>
           <p class="text-left">Aurélie ne sait pas rester en place plus de quelques mois; 'et si on changeait d'appart ?', 'et si on partait en vacances à Istanbul ?', 'et si je quittais l'académie ?', 'ça te dit de tout quitter et de partir en Australie, au Canada, à Barcelone, en Suisse ?', 'et si on faisait le tour du monde en un an?', 'je vais me mettre au crochet, ça serait super que je sache faire quelque chose de créatif'.</p>
           <p class="text-left">C'est en voyant l'attitude réconfortante et encourageante de Romain à chaque nouvelle idée, et en ignorant volontairement ses yeux apeurés, qu'Aurélie sû qu'elle ne pouvait plus se passer de lui. Alors, elle n'hésita pas à dire oui, en cette soirée romantique du 14 Octobre 2018, à Vienne...</p>
         </div>
@@ -101,7 +100,7 @@
 </div>
 <div class="ww-section bg-light" id="events">
   <div class="container ww-wedding-event">
-    <h2 class="h1 text-center pb-3 ww-title">Wedding Events</h2>
+    <h2 class="h1 text-center pb-3 ww-title">Le programme</h2>
     <div class="row">
       <div class="col-md-7 col-sm-12">
         <div class="my-3">
@@ -110,7 +109,8 @@
             <li><i class="text-muted fas fa-map-marker-alt"></i><a href="https://www.google.com/maps/place/City+Hall/@46.3238382,-0.4648161,15z/data=!4m5!3m4!1s0x0:0x3d25479ae0e8605a!8m2!3d46.3238382!4d-0.4648161" target="_blank"><span class="pl-2 text-muted">Mairie de Niort, 1 Place Martin Bastard, 79000 Niort, France</span></a></li>
             <li class="pt-2"><i class="text-muted far fa-calendar-alt"></i><span class="pl-2 text-muted">27 Juillet 2019, 15h00</span></li>
           </ul>
-          <p>La cérémonie civile se déroulera à la mairie de Niort.</p>
+          <p>La cérémonie civile se déroulera à la mairie de Niort suivie d'une courte séance photo devant la mairie, les Halles et le Donjon de Niort.
+          </p>
         </div>
       </div>
       <div class="col-md-5 col-sm-12">
@@ -125,7 +125,23 @@
             <li><i class="text-muted fas fa-map-marker-alt "></i><a href="https://www.google.com/maps/place/La+Gravette,+79360+Beauvoir-sur-Niort,+France/@46.2013597,-0.4874936,17z/data=!3m1!4b1!4m5!3m4!1s0x4800d2b6dc335333:0x338e629cf0bc74fc!8m2!3d46.2013597!4d-0.4852996" target="_blank"><span class="pl-2 text-muted">Domaine de la Gravette, 79360 Beauvoir-sur-Niort, France</span></a></li>
             <li class="pt-2"><i class="text-muted far fa-calendar-alt "></i><span class="pl-2 text-muted">27 Juillet 2019, 17h00</span></li>
           </ul>
-          <p>La cérémonie laïque se déroulera au domaine de la Gravette.</p>
+          <p>Une cérémonie laïque se déroulera au domaine de La Gravette suivie du vin d'honneur, du dîner et de la soirée sur le dancefloor!
+          </p>
+        </div>
+      </div>
+      <div class="col-md-5 col-sm-12">
+        <div class="my-3"><img class="img-fluid" src="images/la_gravette_grange.jpg" alt="Le domaine de la Gravette"/></div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-7 col-sm-12">
+        <div class="my-3">
+          <div class="h4">Brunch</div>
+          <ul>
+            <li><i class="text-muted fas fa-map-marker-alt "></i><a href="https://www.google.com/maps/place/La+Gravette,+79360+Beauvoir-sur-Niort,+France/@46.2013597,-0.4874936,17z/data=!3m1!4b1!4m5!3m4!1s0x4800d2b6dc335333:0x338e629cf0bc74fc!8m2!3d46.2013597!4d-0.4852996" target="_blank"><span class="pl-2 text-muted">Domaine de la Gravette, 79360 Beauvoir-sur-Niort, France</span></a></li>
+            <li class="pt-2"><i class="text-muted far fa-calendar-alt "></i><span class="pl-2 text-muted">28 Juillet 2019, 13h00</span></li>
+          </ul>
+          <p>Un brunch se déroulera le dimanche au domaine de la Gravette pour se remettre de nos émotions...</p>
         </div>
       </div>
       <div class="col-md-5 col-sm-12">
@@ -135,7 +151,7 @@
   </div>
 </div>
 <div class="ww-section" id="timeline">
-  <h1 class="h1 text-center pb-3 ww-title">Timeline</h1>
+  <h1 class="h1 text-center pb-3 ww-title">Notre histoire</h1>
   <ul class="timeline animate-box">
     <li class="animate-box">
       <div class="timeline-badge" style="background-image:url(images/couple-1.jpg);"></div>
@@ -177,7 +193,7 @@
 </div>
 <div class="ww-section" id="people">
   <div class="container ww-couple-friends">
-    <h2 class="h1 text-center pt-3 ww-title">Groomsmen & Bridesmaids</h2>
+    <h2 class="h1 text-center pt-3 ww-title">Nos témoins</h2>
     <div class="row">
       <div class="col-md-3">
         <div class="card d-block mb-3"><img class="card-img-top" src="images/groom-men-1.jpg" alt="Groom Men 1"/>
@@ -224,7 +240,7 @@
 <div class="ww-section bg-light" id="tourism-details">
     <div class="ww-tourism">
       <div class="container">
-        <h2 class="h1 text-center pb-3 ww-title">Comment venir</h2>
+        <h2 class="h1 text-center pb-3 ww-title">Comment venir ?</h2>
         <div class="row how-to-come">
           <div class="col-md-4">
             <div class="tourism-icon">
@@ -287,7 +303,7 @@
             </p>   
           </div>
         </div>
-        <h2 class="h1 text-center pb-3 ww-title">Where to sleep</h2>
+        <h2 class="h1 text-center pb-3 ww-title">Où dormir ?</h2>
         <div class="row justify-content-center where-to-sleep">
           <div class="col-md-4">
             <h2>Gites</h2>
@@ -321,7 +337,7 @@
             </div>
           </div>
         </div>
-        <h2 class="h1 text-center pb-3 ww-title">What to visit</h2>
+        <h2 class="h1 text-center pb-3 ww-title">Quoi visiter ?</h2>
         <div class="row what-to-visit">
           <div class="col-md-3 visit-place">
             <h3>La Rochelle</h3>
@@ -375,30 +391,10 @@
       </div>
     </div>
   </div>
-<div class="ww-section bg-light" id="gallery" hidden>
-  <div class="ww-photo-gallery">
-    <div class="container">
-      <h2 class="h1 text-center pb-3 ww-title">Photo Gallery</h2>
-      <div class="col-md-12 text-center ww-category-filter mb-4"><a class="btn btn-outline-primary ww-filter-button" href="#" data-filter="all">All</a><a class="btn btn-outline-primary ww-filter-button" href="#" data-filter="vacation">Our Vacation</a><a class="btn btn-outline-primary ww-filter-button" href="#" data-filter="party">Party</a><a class="btn btn-outline-primary ww-filter-button" href="#" data-filter="ceremony">Ceremony</a><a class="btn btn-outline-primary ww-filter-button" href="#" data-filter="wedding">Wedding</a></div>
-      <div class="ww-gallery">
-        <div class="card-columns">
-          <div class="card" data-groups="[&quot;vacation&quot;,&quot;ceremony&quot;]"><a href="images/gallery-pic-1.jpg" data-toggle="lightbox" data-gallery="ww-gallery"><img class="img-fluid" src="images/gallery-pic-1.jpg" alt="Gallery Pic 1"/></a></div>
-          <div class="card" data-groups="[&quot;party&quot;,&quot;wedding&quot;]"><a href="images/gallery-pic-2.jpg" data-toggle="lightbox" data-gallery="ww-gallery"><img class="img-fluid" src="images/gallery-pic-2.jpg" alt="Gallery Pic 2"/></a></div>
-          <div class="card" data-groups="[&quot;vacation&quot;]"><a href="images/gallery-pic-3.jpg" data-toggle="lightbox" data-gallery="ww-gallery"><img class="img-fluid" src="images/gallery-pic-3.jpg" alt="Gallery Pic 3"/></a></div>
-          <div class="card" data-groups="[&quot;party&quot;,&quot;vacation&quot;]"><a href="images/gallery-pic-4.jpg" data-toggle="lightbox" data-gallery="ww-gallery"><img class="img-fluid" src="images/gallery-pic-4.jpg" alt="Gallery Pic 4"/></a></div>
-          <div class="card" data-groups="[&quot;vacation&quot;]"><a href="images/gallery-pic-5.jpg" data-toggle="lightbox" data-gallery="ww-gallery"><img class="img-fluid" src="images/gallery-pic-5.jpg" alt="Gallery Pic 5"/></a></div>
-          <div class="card" data-groups="[&quot;wedding&quot;,&quot;ceremony&quot;,&quot;party&quot;]"><a href="images/gallery-pic-6.jpg" data-toggle="lightbox" data-gallery="ww-gallery"><img class="img-fluid" src="images/gallery-pic-6.jpg" alt="Gallery Pic 6"/></a></div>
-          <div class="card" data-groups="[&quot;vacation&quot;]"><a href="images/gallery-pic-7.jpg" data-toggle="lightbox" data-gallery="ww-gallery"><img class="img-fluid" src="images/gallery-pic-7.jpg" alt="Gallery Pic 7"/></a></div>
-          <div class="card" data-groups="[&quot;wedding&quot;,&quot;party&quot;]"><a href="images/gallery-pic-8.jpg" data-toggle="lightbox" data-gallery="ww-gallery"><img class="img-fluid" src="images/gallery-pic-8.jpg" alt="Gallery Pic 8"/></a></div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
 <div class="ww-section ww-rsvp-detail text-white" id="rsvp">
   <div class="container">
     <div class="col text-center">
-      <h2 class="h1 ww-title pb-3">Join Our Party</h2>
+      <h2 class="h1 ww-title pb-3">Dites-nous que vous venez !</h2>
     </div>
     <div class="row ww-rsvp-form">
       <div class="col-md-10">
@@ -454,7 +450,7 @@
             </div>
             <div class="row">
               <div class="col text-center">
-                <button class="btn btn-primary btn-submit" type="submit">Send</button>
+                <button class="btn btn-primary btn-submit" type="submit">Envoyer</button>
               </div>
             </div>
           </form>
