--- a/index.html
+++ b/index.html
@@ -151,45 +151,71 @@
   </div>
 </div>
 <div class="ww-section" id="timeline">
-  <h1 class="h1 text-center pb-3 ww-title">Notre histoire</h1>
-  <ul class="timeline animate-box">
-    <li class="animate-box">
-      <div class="timeline-badge" style="background-image:url(images/couple-1.jpg);"></div>
-      <div class="timeline-panel">
-        <div class="timeline-heading">
-          <h3 class="timeline-title">First We Meet</h3>
-          <span class="date">December 25, 2015</span>
+  <div class="container">
+    <h1 class="h1 text-center pb-3 ww-title">Notre histoire</h1>
+    <ul class="timeline animate-box">
+      <li class="animate-box">
+        <div class="timeline-badge" style="background-image:url(images/couple-1.jpg);"></div>
+        <div class="timeline-panel">
+          <div class="timeline-heading">
+            <h3 class="timeline-title">Nos débuts</h3>
+            <span class="date">15 Mars 2013</span>
+          </div>
+          <div class="timeline-body">
+            <p>La rencontre...</p>
+          </div>
         </div>
-        <div class="timeline-body">
-          <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+      </li>
+      <li class="timeline-inverted animate-box">
+        <div class="timeline-badge" style="background-image:url(images/couple-2.jpg);"></div>
+        <div class="timeline-panel">
+          <div class="timeline-heading">
+            <h3 class="timeline-title">Emménagement</h3>
+            <span class="date">5 Décembre 2013</span>
+          </div>
+          <div class="timeline-body">
+            <p>Nos premiers pas de vie à deux.</p>
+          </div>
         </div>
-      </div>
-    </li>
-    <li class="timeline-inverted animate-box">
-      <div class="timeline-badge" style="background-image:url(images/couple-2.jpg);"></div>
-      <div class="timeline-panel">
-        <div class="timeline-heading">
-          <h3 class="timeline-title">First Date</h3>
-          <span class="date">December 28, 2015</span>
+      </li>
+      <li class="animate-box">
+        <div class="timeline-badge" style="background-image:url(images/couple-3.jpg);"></div>
+        <div class="timeline-panel">
+          <div class="timeline-heading">
+            <h3 class="timeline-title">Départ pour notre vie en Angleterre</h3>
+            <span class="date">5 Octobre 2014</span>
+          </div>
+          <div class="timeline-body">
+            <p>Le départ chez nos voisins anglais. De nouvelles carrières professionnelles se dessinent.</p>
+          </div>
         </div>
-        <div class="timeline-body">
-          <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+      </li>
+      <li class="timeline-inverted animate-box">
+        <div class="timeline-badge" style="background-image:url(images/couple-3.jpg);"></div>
+        <div class="timeline-panel">
+          <div class="timeline-heading">
+            <h3 class="timeline-title">Demande en mariage</h3>
+            <span class="date">14 Octobre 2017</span>
+          </div>
+          <div class="timeline-body">
+            <p>Lors d'un week-end d'exception à Vienne, elle dit "oui".</p>
+          </div>
         </div>
-      </div>
-    </li>
-    <li class="animate-box">
-      <div class="timeline-badge" style="background-image:url(images/couple-3.jpg);"></div>
-      <div class="timeline-panel">
-        <div class="timeline-heading">
-          <h3 class="timeline-title">In A Relationship</h3>
-          <span class="date">January 1, 2016</span>
+      </li>
+      <li class="animate-box">
+        <div class="timeline-badge" style="background-image:url(images/couple-3.jpg);"></div>
+        <div class="timeline-panel">
+          <div class="timeline-heading">
+            <h3 class="timeline-title">Arrivée d'Alice</h3>
+            <span class="date">17 Décembre 2018</span>
+          </div>
+          <div class="timeline-body">
+            <p>Après un accouchement riche en emotion, notre famille s'agrandit avec l'arrivée d'Alice.</p>
+          </div>
         </div>
-        <div class="timeline-body">
-          <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-        </div>
-      </div>
-    </li>
-  </ul>
+      </li>
+    </ul>
+  </div>
 </div>
 <div class="ww-section" id="people">
   <div class="container ww-couple-friends">
