--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
   <div class="ww-wedding-announcement d-flex align-items-center justify-content-start">
     <div class="container ww-announcement-container">
       <p class="ww-couple-name ww-title" data-aos="zoom-in-down" data-aos-delay="300" data-aos-duration="1000">Aurélie & Romain</p><img class="img-fluid mt-1" src="images/laurel-1.png" alt="Heart" data-aos="zoom-in-down" data-aos-delay="300" data-aos-duration="1000"/>
-      <p class="ww-announcement-date h1 mt-5 ww-title" data-aos="zoom-in-down" data-aos-delay="300" data-aos-duration="1000" data-aos-offset="10">27 Juillet 2019</p>
+      <p class="ww-announcement-date h1 mt-5 ww-title" data-aos="zoom-in-down" data-aos-delay="300" data-aos-duration="1000" data-aos-offset="10">27 juillet 2019</p>
     </div>
   </div>
 </div>
 <div class="ww-nav-bar sticky-top bg-blue">
   <nav class="navbar navbar-expand-lg navbar-light">
     <div class="container">
-      <h1 class="h2"><a class="pl-4 navbar-brand" href="#">Aurélie & Romain - 27 Juillet 2019</a></h1>
+      <h1 class="h2"><a class="pl-4 navbar-brand" href="#">Aurélie & Romain - 27 juillet 2019</a></h1>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ww-navbarNav" aria-controls="ww-navbarNav" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
       <div class="collapse navbar-collapse text-uppercase" id="ww-navbarNav">
         <ul class="navbar-nav ml-auto">
@@ -107,7 +107,7 @@
           <div class="h4">Cérémonie civile</div>
           <ul>
             <li><i class="text-muted fas fa-map-marker-alt"></i><a href="https://www.google.com/maps/place/City+Hall/@46.3238382,-0.4648161,15z/data=!4m5!3m4!1s0x0:0x3d25479ae0e8605a!8m2!3d46.3238382!4d-0.4648161" target="_blank"><span class="pl-2 text-muted">Mairie de Niort, 1 Place Martin Bastard, 79000 Niort, France</span></a></li>
-            <li class="pt-2"><i class="text-muted far fa-calendar-alt"></i><span class="pl-2 text-muted">27 Juillet 2019, 15h00</span></li>
+            <li class="pt-2"><i class="text-muted far fa-calendar-alt"></i><span class="pl-2 text-muted">27 juillet 2019, 15h00</span></li>
           </ul>
           <p>La cérémonie civile se déroulera à la mairie de Niort suivie d'une courte séance photo devant la mairie, les Halles et le Donjon de Niort.
           </p>
@@ -123,7 +123,7 @@
           <div class="h4">Cérémonie laïque</div>
           <ul>
             <li><i class="text-muted fas fa-map-marker-alt "></i><a href="https://www.google.com/maps/place/La+Gravette,+79360+Beauvoir-sur-Niort,+France/@46.2013597,-0.4874936,17z/data=!3m1!4b1!4m5!3m4!1s0x4800d2b6dc335333:0x338e629cf0bc74fc!8m2!3d46.2013597!4d-0.4852996" target="_blank"><span class="pl-2 text-muted">Domaine de la Gravette, 79360 Beauvoir-sur-Niort, France</span></a></li>
-            <li class="pt-2"><i class="text-muted far fa-calendar-alt "></i><span class="pl-2 text-muted">27 Juillet 2019, 17h00</span></li>
+            <li class="pt-2"><i class="text-muted far fa-calendar-alt "></i><span class="pl-2 text-muted">27 juillet 2019, 17h00</span></li>
           </ul>
           <p>Une cérémonie laïque se déroulera au domaine de La Gravette suivie du vin d'honneur, du dîner et de la soirée sur le dancefloor!
           </p>
@@ -139,7 +139,7 @@
           <div class="h4">Brunch</div>
           <ul>
             <li><i class="text-muted fas fa-map-marker-alt "></i><a href="https://www.google.com/maps/place/La+Gravette,+79360+Beauvoir-sur-Niort,+France/@46.2013597,-0.4874936,17z/data=!3m1!4b1!4m5!3m4!1s0x4800d2b6dc335333:0x338e629cf0bc74fc!8m2!3d46.2013597!4d-0.4852996" target="_blank"><span class="pl-2 text-muted">Domaine de la Gravette, 79360 Beauvoir-sur-Niort, France</span></a></li>
-            <li class="pt-2"><i class="text-muted far fa-calendar-alt "></i><span class="pl-2 text-muted">28 Juillet 2019, 13h00</span></li>
+            <li class="pt-2"><i class="text-muted far fa-calendar-alt "></i><span class="pl-2 text-muted">28 juillet 2019, 13h00</span></li>
           </ul>
           <p>Un brunch se déroulera le dimanche au domaine de la Gravette pour se remettre de nos émotions...</p>
         </div>
