Rename "events" section

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <div class="collapse navbar-collapse text-uppercase" id="ww-navbarNav">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item"><a class="nav-link smooth-scroll" href="#couple">Nous</a></li>
-          <li class="nav-item"><a class="nav-link smooth-scroll" href="#events">Le programme</a></li>
+          <li class="nav-item"><a class="nav-link smooth-scroll" href="#events">Programme</a></li>
           <li class="nav-item"><a class="nav-link smooth-scroll" href="#timeline">Notre histoire</a></li>
           <li class="nav-item"><a class="nav-link smooth-scroll" href="#people">Nos témoins</a></li>
           <li class="nav-item"><a class="nav-link smooth-scroll" href="#tourism-details">Infos pratiques</a></li>
@@ -100,7 +100,7 @@
 </div>
 <div class="ww-section bg-light" id="events">
   <div class="container ww-wedding-event">
-    <h2 class="h1 text-center pb-3 ww-title">Le programme</h2>
+    <h2 class="h1 text-center pb-3 ww-title">Programme</h2>
     <div class="row">
       <div class="col-md-7 col-sm-12">
         <div class="my-3">
